docs: Complete Ex 1.3

--- a/Analyzing_Subway_Data_NDFDSI.ipynb
+++ b/Analyzing_Subway_Data_NDFDSI.ipynb
@@ -270,19 +270,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2019-03-03T13:39:46.005782Z",
+     "start_time": "2019-03-03T13:39:45.995550Z"
+    }
    },
    "outputs": [],
    "source": [
-    "import pandas\n",
+    "import pandas as pd\n",
     "\n",
     "def filter_by_regular(filename):\n",
     "    \n",
-    "    turnstile_data = # your code here\n",
-    "    # more of your code here\n",
+    "    turnstile_data = pd.read_csv(filename)\n",
+    "    turnstile_data = turnstile_data.query(\" DESCn == 'REGULAR' \")\n",
     "    return turnstile_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-03T13:40:23.296780Z",
+     "start_time": "2019-03-03T13:40:21.630737Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    C/A  UNIT       SCP STATION  LINENAME  DIVISION          DATEn     TIMEn  \\\n",
+      "1  A002  R051  02-00-00   59 ST   NQR456W       BMT     05/27/2017  00:00:00   \n",
+      "2  A002  R051  02-00-00   59 ST   NQR456W       BMT     05/27/2017  04:00:00   \n",
+      "3  A002  R051  02-00-00   59 ST   NQR456W       BMT     05/27/2017  08:00:00   \n",
+      "4  A002  R051  02-00-00   59 ST   NQR456W       BMT     05/27/2017  12:00:00   \n",
+      "5  A002  R051  02-00-00   59 ST   NQR456W       BMT     05/27/2017  16:00:00   \n",
+      "\n",
+      "     DESCn    ENTRIESn                                             EXITSn  \n",
+      "1  REGULAR  0006195217  0002098317                                    ...  \n",
+      "2  REGULAR  0006195240  0002098318                                    ...  \n",
+      "3  REGULAR  0006195256  0002098347                                    ...  \n",
+      "4  REGULAR  0006195346  0002098432                                    ...  \n",
+      "5  REGULAR  0006195518  0002098491                                    ...  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(filter_by_regular(\"master_file.txt\").head())"
    ]
   },
   {
