docs: Complete Ex 1.4

--- a/Analyzing_Subway_Data_NDFDSI.ipynb
+++ b/Analyzing_Subway_Data_NDFDSI.ipynb
@@ -334,9 +334,10 @@
     "More specifically, there are two things you should do:\n",
     "\n",
     "1 - Create a new column, called ENTRIESn_hourly\n",
+    "\n",
     "2 - Insert in this column the difference between ENTRIESn in the current and the previous column. If the line has any NAN, fill it out/replace by 1.\n",
     "\n",
-    "Tip: The funtions shift() and fillna() in Pandas might be usefull for this exercise.\n",
+    "Tip: The funtions shift() and fillna() in Pandas might be useful for this exercise.\n",
     "\n",
     "Below you will find and example of how your Dataframe should look by the end of this exercise:\n",
     "\n",
@@ -356,9 +357,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2019-03-03T13:49:53.553030Z",
+     "start_time": "2019-03-03T13:49:53.545169Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -366,9 +370,52 @@
     "\n",
     "def get_hourly_entries(df):\n",
     "    \n",
-    "    \n",
+    "    df[\"ENTRIESn_hourly\"] = pd.to_numeric(df[\"ENTRIESn\"]) -  pd.to_numeric(df[\"ENTRIESn\"].shift())\n",
+    "    df[\"ENTRIESn_hourly\"].fillna(value = 1, inplace = True)\n",
     "    #your code here\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-03T13:50:12.429907Z",
+     "start_time": "2019-03-03T13:50:10.098679Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    C/A  UNIT       SCP STATION  LINENAME  DIVISION          DATEn     TIMEn  \\\n",
+      "1  A002  R051  02-00-00   59 ST   NQR456W       BMT     05/27/2017  00:00:00   \n",
+      "2  A002  R051  02-00-00   59 ST   NQR456W       BMT     05/27/2017  04:00:00   \n",
+      "3  A002  R051  02-00-00   59 ST   NQR456W       BMT     05/27/2017  08:00:00   \n",
+      "4  A002  R051  02-00-00   59 ST   NQR456W       BMT     05/27/2017  12:00:00   \n",
+      "5  A002  R051  02-00-00   59 ST   NQR456W       BMT     05/27/2017  16:00:00   \n",
+      "\n",
+      "     DESCn    ENTRIESn                                             EXITSn  \\\n",
+      "1  REGULAR  0006195217  0002098317                                    ...   \n",
+      "2  REGULAR  0006195240  0002098318                                    ...   \n",
+      "3  REGULAR  0006195256  0002098347                                    ...   \n",
+      "4  REGULAR  0006195346  0002098432                                    ...   \n",
+      "5  REGULAR  0006195518  0002098491                                    ...   \n",
+      "\n",
+      "   ENTRIESn_hourly  \n",
+      "1              1.0  \n",
+      "2             23.0  \n",
+      "3             16.0  \n",
+      "4             90.0  \n",
+      "5            172.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df = filter_by_regular(\"master_file.txt\")\n",
+    "print(get_hourly_entries(df).head())"
    ]
   },
   {
