docs: Complete Ex 1.6

--- a/Analyzing_Subway_Data_NDFDSI.ipynb
+++ b/Analyzing_Subway_Data_NDFDSI.ipynb
@@ -1763,16 +1763,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2019-03-03T13:56:49.120714Z",
+     "start_time": "2019-03-03T13:56:49.114396Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
    "source": [
     "def time_to_hour(time):\n",
     "    \n",
-    "    hour = # your code here\n",
-    "    return hour"
+    "    hour = int(time.split(\":\")[0])\n",
+    "    return hour\n",
+    "\n",
+    "print(time_to_hour(\"23:43:23\"))"
    ]
   },
   {
