docs: Change Session to Part

--- a/Analyzing_Subway_Data_NDFDSI.ipynb
+++ b/Analyzing_Subway_Data_NDFDSI.ipynb
@@ -15,9 +15,9 @@
     "\n",
     "- [Introduction](#intro)\n",
     "- [About this project](#about)\n",
-    "- [Session 1 - Data Gathering](#s1)\n",
-    "- [Session 2 - Data Analysis](#s2)\n",
-    "- [Session 3 - MapReduce](#s3)\n",
+    "- [Part 1 - Data Gathering](#s1)\n",
+    "- [Part 2 - Data Analysis](#s2)\n",
+    "- [Part 3 - MapReduce](#s3)\n",
     "- [Conclusion](#conclusion)\n",
     "\n",
     "\n",
@@ -45,7 +45,7 @@
     "\n",
     "<a id=\"s1\"></a>\n",
     "\n",
-    "## Session 1 - Data Gathering\n",
+    "## Part 1 - Data Gathering\n",
     "\n",
     "### *Exercise 1.1*\n",
     "\n",
@@ -1861,7 +1861,7 @@
    "metadata": {},
    "source": [
     "<a id=\"s2\"></a>\n",
-    "## Session 2 - Data Analysis\n",
+    "## Part 2 - Data Analysis\n",
     "\n",
     "### *Exercise 2.1*\n",
     "\n",
@@ -2464,7 +2464,7 @@
    "metadata": {},
    "source": [
     "<a id=\"s3\"></a>\n",
-    "## Session 3 - MapReduce\n",
+    "## Part 3 - MapReduce\n",
     "\n",
     "### *Exercise 3.1*\n",
     "\n",
