docs: Minor typo in markdown cell before code cell 21

--- a/Analyzing_Subway_Data_NDFDSI.ipynb
+++ b/Analyzing_Subway_Data_NDFDSI.ipynb
@@ -2474,9 +2474,7 @@
     "\n",
     "Now, we will create a mapper. For each entry line, the mapper exit must PRINT (not return) UNIT as a key, and the number of ENTRIESn_hourly as the value. Separate the key and the value with a tab. For example: 'R002 \\ t105105.0'\n",
     "\n",
-    "Export your mapper into a file named mapper_result.txt and send it with your submission. The code for exporting your mapper is already written in the code bellow.\n",
-    "\n",
-    "\n"
+    "Export your mapper into a file named mapper_result.txt and send it with your submission. The code for exporting your mapper is already written in the code below."
    ]
   },
   {
