docs: Add requirements file

--- a/Analyzing_Subway_Data_NDFDSI.ipynb
+++ b/Analyzing_Subway_Data_NDFDSI.ipynb
@@ -2531,7 +2531,12 @@
    "outputs": [],
    "source": [
     "def reducer():\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    Reads mapper result from stdin and prints \"UNIT\" and total hourly entries \\\n",
+    "    for that unit\n",
+    "    Since UNIT appear at multiple lines in mapper result, we will take sum of \\\n",
+    "    all entries for each UNIT\n",
+    "    \"\"\"\n",
     "    old_key = None\n",
     "    entries_count = 0\n",
     "\n",
@@ -2565,13 +2570,11 @@
     "<a id=\"conclusion\"></a>\n",
     "## Conclusion\n",
     "\n",
-    "We compared the hourly trends for Subway user when it rains vs when it doesn't rain. From the graph here, it looks like both distributions are skewed and on an average people use subway more when sky is clear.\n",
+    "We compared the **hourly trends** for Subway user when it rains vs when it doesn't rain. From the graph above, it looks like both distributions are skewed and on an average more people use subway when sky is clear.\n",
     "\n",
     "Then we used Hadoop Streaming to perform a MapReduce job in Python. Mapper function return the number of hourly entries for every unit.\n",
     "\n",
-    "And since the keys are already sorted in `sys.stdin` when passing to `mapper()`, there is **no need to perform the intermediate shuffle sort step.** All we have to do is pass the output of `mapper()` to `reducer()`.\n",
-    "\n",
-    "Reducer performs aggregated sum over all keys.\n",
+    "And since the keys are already sorted in `sys.stdin` when passing to `mapper()`, there is **no need to perform the intermediate shuffle sort step.** All we have to do is pass the output of `mapper()` to `reducer()`. Reducer performs aggregated sum for each key.\n",
     "\n",
     "The result is a single value for every key(unit in this case for every turnstile interactions with subway users)."
    ]
